--- a/module/Application/view/layout/footer.phtml
+++ b/module/Application/view/layout/footer.phtml
@@ -3,7 +3,7 @@
 <p>
 <?php echo $this->translate('message_default_footer'); ?> <a href="http://getbootstrap.com/">Twitter Bootstrap</a>
 |
-Powered by ZF <?php echo Zend_Version::VERSION; ?>
+Powered by ZF <?php echo \Zend\Version\Version::VERSION; ?>
 |
 Branch: step3</p>
 </div>
