Schritt 5 User-Widget

--- a/module/Application/view/layout/sidebar.phtml
+++ b/module/Application/view/layout/sidebar.phtml
@@ -1,5 +1,5 @@
 <div class="well well-small">
-<?php // echo $this->userWidget(); ?>
+<?php echo $this->userWidget(); ?>
 </div>
 
 <div class="well well-small">
