--- a/module/Blog/view/blog/admin/update.phtml
+++ b/module/Blog/view/blog/admin/update.phtml
@@ -1,10 +1,8 @@
 <?php
-$this->updateForm->setView(new Zend_View);
-
 $this->headScript()->appendFile('/js/ckeditor/ckeditor.js', 'text/javascript');
 ?>
 <h1><?php echo $this->translate('title_blog_admin_update'); ?></h1>
-<?php echo $this->updateForm; ?>
+<?php echo $this->form($this->updateForm); ?>
 <a href="<?php echo $this->url(
     'blog-admin', array('controller' => 'admin', 'action' => null), true
 ); ?>" class="btn">
